--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -30,19 +30,23 @@
 
     <!-- font -->
     <link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed" rel="stylesheet">
-    
+
     <!
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
-    
+
+
     <style>
         body {
-            background-color: wheat;
+            
             background-repeat: repeat-x;
             font-family: 'Saira Semi Condensed', sans-serif;
             font-size: 22px;
-           
+            #grad1 {
+                    height: 200px;
+                     background-color: red; 
+                    background-image: linear-gradient(red, yellow);
+}
            
         }
         </style>
@@ -52,7 +56,7 @@
             aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        
+
         <div class="collapse navbar-collapse" id="collapsibleNavId">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
@@ -71,7 +75,8 @@
                     <a class="nav-link" href="/reports">Report </a>
                 </li>-->
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Report</a>
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">Report</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownId">
                         <a class="dropdown-item" href="/report_product">Report Product</a>
                         <a class="dropdown-item" href="/report_user">Report User</a>
@@ -81,7 +86,7 @@
 
         </div>
         <form class="form-inline my-2 my-lg-0">
-            <input class="form-control" id="myInput" type="text" placeholder="Search..">&nbsp;&nbsp; 
+            <input class="form-control" id="myInput" type="text" placeholder="Search..">&nbsp;&nbsp;
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
     </nav>
