--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -38,16 +38,11 @@
 
     <style>
         body {
-            
+            background-color: wheat;
             background-repeat: repeat-x;
             font-family: 'Saira Semi Condensed', sans-serif;
             font-size: 22px;
-            #grad1 {
-                    height: 200px;
-                     background-color: red; 
-                    background-image: linear-gradient(red, yellow);
-}
-           
+            
         }
         </style>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
