--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,5 +1,12 @@
 <% include ../partials/header %>
 <div class="jumbotron">
+    
+        <style>
+                body {
+                    opacity:0.4;
+                }
+                </style>
+        
             <h1 class="display-3">PROJECT I</h1>
             <p class="lead">Workshop FullStack</p>
             <hr class="my-2">
