--- a/views/pages/report_product.ejs
+++ b/views/pages/report_product.ejs
@@ -15,6 +15,7 @@
                 <td scope="row"> <%= product.id %></td>
                 <td><%= product.title %></td>
                 <td><%= product.price %></td>
+                <td><%= product.total %></td>
              
             </tr>
             <% }); %>
