--- a/views/pages/report_product.ejs
+++ b/views/pages/report_product.ejs
@@ -7,6 +7,7 @@
                 <th>ID</th>
                 <th>Title</th>
                 <th>Price</th>
+                <th>total</th>
             </tr>
         </thead>
         <tbody id="myTable">
