--- a/views/pages/report_product.ejs
+++ b/views/pages/report_product.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header %>
 <div class="jumbotron">
-        <h1 class="display-4">Report Product</h1>
+        <h1 class="display-4">Top 10 of Product</h1>
     <table class="table">     
         <thead>
             <tr>
