--- a/views/pages/report_user.ejs
+++ b/views/pages/report_user.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header %>
 <div class="jumbotron">
-        <h1 class="display-4">Report User</h1>
+        <h1 class="display-4">Top 10 of User</h1>
 <table class="table">
     <thead>
         <tr>
