--- a/views/pages/report_product.ejs
+++ b/views/pages/report_product.ejs
@@ -34,7 +34,7 @@
         });
     </script>
 
-<canvas id="myChart" width="400" height="400"></canvas>
+<canvas id="myChart" width="400" height="400">
 <script>
     var ctx = document.getElementById("myChart").getContext('2d');
     var myChart = new Chart(ctx, {
@@ -74,5 +74,5 @@
         }
     });
     </script>
-
+</canvas>
 <% include ../partials/footer %>
