--- a/views/pages/user_edit.ejs
+++ b/views/pages/user_edit.ejs
@@ -1,5 +1,5 @@
 <% include ../partials/header %>
-<script language="JavaScript">
+<!-- <script language="JavaScript">
   function chkConfirm(){
     if(confirm('Do you want to delete product')==true){
       window.location = "/user_delete/<%= user.id %>";
@@ -8,7 +8,7 @@
     return(null);
   }
 }
-</script>
+</script> -->
 <form action ="/user/update" method = "post">
 <div class="jumbotron">
 <h1 class="display-4">USERS</h1>
@@ -46,11 +46,28 @@
 
 <a name="" id="" class="btn btn-secondary" href="/users" role="button">CANCLE</a>
 <button type="submit" class="btn btn-success">SAVE</button>
-<a name="btnConfirm" value="Confirm" OnClick="chkConfirm()" class="btn btn-danger" href="#" role="button">DELETE</a>
-
+<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal" role="button" >DELETE</button>
 
 </div>
 </form>
 
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel"> Confirm Delete </h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body"> Do you want to delete user ? </div>
+      <div class="modal-footer">
+        
+        <button type="button" class="btn btn-secondary" data-dismiss="modal"> CANCLE </button>
+        <a name="" id="" class="btn btn-danger" href="/user_delete/<%= user.id %>" role="button"> DELETE </a>
+      </div>
+    </div>
+  </div>
+</div>
 
 <% include ../partials/footer %>
